put the favicon

--- a/freshstart.html
+++ b/freshstart.html
@@ -70,7 +70,7 @@
     </style>
 
     
-    <link rel="shortcut icon" href="image/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 </head>
 <body>
     <h2><i><div id="great">10 Greatest Muslim Warriors After Prophet Muhammad (ﷺ)</div></i></h2>
